# c-library-and-consumer-example

./: README.txt
with-cmake/consumer/: CMakeLists.txt  README.md
with-makefile/consumer/: Makefile  README.md
with-makefile/consumer-project/src/: main.c
with-makefile/library-project/include/: lib.h
